gh pages corregir

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tienda_virtual",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://alejovn.github.io/menuReact/",
+  "homepage": "https://alejovn.github.io/MenuReact/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
